--- a/csfiddle/Views/Home/Index.cshtml
+++ b/csfiddle/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @using ChameleonForms.Component
 @using ChameleonForms.Enums
 @using ChameleonForms.Templates
-@model csfiddle.Controllers.CodeViewModel
+@model csfiddle.Controllers.ViewModels.CodeViewModel
 
 <!DOCTYPE html>
 <html>
