--- a/csfiddle/Content/site.css
+++ b/csfiddle/Content/site.css
@@ -15,43 +15,8 @@
     margin-bottom: 10px;
 }
 
-dd {
-    margin: 5px;
-    display: block;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
-}
-
-dl {
-    margin: 5px;
-    display: block;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
-}
-
 .CodeMirror {
-    margin-top: 10px;
     height: 100% !important;
-}
-
-.fullheight {
-    display: block;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
-    margin: 5px;
-    margin-bottom: 40px !important;
 }
 
 .ui-layout-north {
@@ -83,4 +48,8 @@ dl {
 
 .ui-layout-toggler-west {
     border-width: 0;
+}
+
+#result {
+    padding: 10px;
 }
