--- a/csfiddle/Views/Home/Index.cshtml
+++ b/csfiddle/Views/Home/Index.cshtml
@@ -10,18 +10,30 @@
         @Scripts.Render("~/sitescripts")
         <script type="text/javascript">
             function runCode() {
-                $("#run").innerHTML = "Running...";
+                $("#run").html("Running...");
                 $.post('/', { InputCode: csfiddle.editor.getValue() }, function (data) {
                     $('#result').html("<pre>" + data + "</pre>");
-                })
-                    .always(function () { $("#run").innerHTML = "Run";});
+                }).always(function () { $("#run").html("Run"); } );
+            }
+            function save() {
+                $("#save").html("Saving...");
+                $.post('/Save', { Id: $("#id").val(), InputCode: csfiddle.editor.getValue() }, function (id) {
+                    if ($("#id").val() != id) {
+                        history.pushState(null, "Viewing Fiddle " + id, "/" + id);
+                        $("#id").val(id);
+                    }
+                    $('#result').html("Saved!");
+                }).always(function () { $("#save").html("Save"); });
             }
         </script>
     </head>
     <body>
-        <div class="ui-layout-north"><button onclick="window.location = '';">New</button><button id="run" onclick="runCode()">Run</button><button>Save</button></div>
+        <div class="ui-layout-north"><button onclick="window.location = '';">New</button><button id="run" onclick="runCode()">Run</button><button id="save" onclick="save()">Save</button></div>
         <div class="ui-layout-west">
-            <textarea id="InputCode" name="InputCode">@Model.InputCode</textarea>
+            <form>
+                <input type="hidden" id="id" name="id" value="@Model.Id" />
+                <textarea id="InputCode" name="InputCode">@Model.InputCode</textarea>
+            </form>
         </div>
         <div class="ui-layout-center">
             <div id="result"><pre>@Model.Result</pre></div>
