--- a/csfiddle/Views/Home/Index.cshtml
+++ b/csfiddle/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
         <title>c#fiddle</title>
+        <link rel="icon" type="image/vnd.microsoft.icon" href="~/Content/images/favicon.ico" />
         @Styles.Render("~/sitecss")
         @Scripts.Render("~/sitescripts")
     </head>
