--- a/csfiddle/Views/Home/Index.cshtml
+++ b/csfiddle/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             </form>
         </div>
         <div class="ui-layout-center">
-            <div id="result"><pre>@Model.Result</pre></div>
+            <div id="result">@Model.Result</div>
         </div>
         <div class="ui-layout-south">A side project by <a href="http://twitter.com/mdaviesnet">@@mdaviesnet</a></div>
     </body>
