--- a/csfiddle/Views/Home/Index.cshtml
+++ b/csfiddle/Views/Home/Index.cshtml
@@ -9,6 +9,17 @@
         <link rel="icon" type="image/vnd.microsoft.icon" href="~/Content/images/favicon.ico" />
         @Styles.Render("~/sitecss")
         @Scripts.Render("~/sitescripts")
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-221584-37', 'csharpfiddle.com');
+            ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <div class="ui-layout-north"><button id="new">New</button><button id="run">Run</button><button id="save">Run and Save</button></div>
