--- a/csfiddle/Views/Home/Help.cshtml
+++ b/csfiddle/Views/Home/Help.cshtml
@@ -17,10 +17,10 @@
 
         <h3>How does it work?</h3>
         <p>When you run code, we create a new sandboxed process on the server with a timeout of 10 seconds.</p>
-        <p>At the moment, your code must run with very limited permissions while we evaluate how best to securely expand what you can do.</p>
+        <p>While in BETA, your code must run with very limited permissions (no network, threading or filesystem access).</p>
 
         <h3>What version of .NET does it use?</h3>
-        <p>The code currently compiles and runs using the .NET 4.5 Framework. We'll be expanding this to future options in the future.</p>
+        <p>The code currently compiles and runs using the .NET 4.5 Framework.</p>
 
         <h3>Where can I ask questions / send you some early feedback?</h3>
         <p>Send me a tweet <a href="http://twitter.com/mdaviesnet" target="_blank">@@mdaviesnet</a>!</p>
