--- a/csfiddle/Views/Home/Help.cshtml
+++ b/csfiddle/Views/Home/Help.cshtml
@@ -26,7 +26,7 @@
         <p>Send me a tweet <a href="http://twitter.com/mdaviesnet" target="_blank">@@mdaviesnet</a>!</p>
 
         <h3>Will you be releasing the source code?</h3>
-        <p>Yes. Once I've received some further feedback on the app, I'll eventually be opening this up as a <a href="http://github.com" target="_blank">GitHub project</a>.</p>
+        <p>Yes. Once I've received some further feedback on the app, I'll eventually be opening this up as a <a href="http://github.com/MattDavies" target="_blank">GitHub project</a>.</p>
         
         <h3>What are your ideas/suggestions so far?</h3>
         <ul>
