--- a/csfiddle/Views/Home/Help.cshtml
+++ b/csfiddle/Views/Home/Help.cshtml
@@ -16,7 +16,7 @@
         <p>A very basic tool that lets you save and send executable snippets of code to others.</p>
 
         <h3>How does it work?</h3>
-        <p>When you run code, we create a new sandboxed process on the server with a timeout of 10 seconds.</p>
+        <p>When you run code, the server creates a new sandboxed process with a timeout of 10 seconds.</p>
         <p>While in BETA, your code must run with very limited permissions (no network, threading or filesystem access).</p>
 
         <h3>What version of .NET does it use?</h3>
@@ -28,8 +28,12 @@
         <h3>Will you be releasing the source code?</h3>
         <p>Yes. Once I've received some further feedback on the app, I'll eventually be opening this up as a <a href="http://github.com/MattDavies" target="_blank">GitHub project</a>.</p>
         
+        <h3>Why take a dependency on JavaScript?</h3>
+        <p>I strongly believe public websites should still support older browsers and users who choose to disable JavaScript - this was just a quick prototype application, updates coming soon!</p>
+        
         <h3>What are your ideas/suggestions so far?</h3>
         <ul>
+            <li>Mobile support</li>
             <li>Gist integration</li>
             <li>NuGet package support</li>
             <li>A basic test runner</li>
