--- a/csfiddle/Views/Shared/_Layout.cshtml
+++ b/csfiddle/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @if (ViewBag.Editor == true)
     {
         @Scripts.Render("~/editor")
+        <meta name="Description" content="Coding tool that allows you to save and send executable snippets of C# code to others.">
     }
     <script>
         (function (i, s, o, g, r, a, m) {
