Remove last text references to c#fiddle

--- a/OpenFiddle/Views/Home/Help.cshtml
+++ b/OpenFiddle/Views/Home/Help.cshtml
@@ -12,14 +12,14 @@
 </div>
 <div class="ui-layout-center">
     <div id="help">
-        <h3>What is C#Fiddle?</h3>
-        <p>A very basic tool that lets you save and send executable snippets of code to others.</p>
+        <h3>What is OpenFiddle</h3>
+        <p>A very basic tool that lets you save and send executable snippets of code (initially C#) to others.</p>
 
         <h3>How does it work?</h3>
         <p>When you run code, the server creates a new sandboxed process with a timeout of 10 seconds.</p>
         <p>While in BETA, your code must run with very limited permissions (no network, threading or filesystem access).</p>
 
-        <h3>What version of .NET does it use?</h3>
+        <h3>What version of .NET does it use for C#?</h3>
         <p>The code currently compiles and runs using the .NET 4.5 Framework.</p>
 
         <h3>Where can I ask questions / send you some early feedback?</h3>
