--- a/OpenFiddle/Views/Shared/_Layout.cshtml
+++ b/OpenFiddle/Views/Shared/_Layout.cshtml
@@ -3,14 +3,14 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>c#fiddle</title>
+    <title>OpenFiddle</title>
     <link rel="icon" type="image/vnd.microsoft.icon" href="~/Content/images/favicon.ico" />
     @Styles.Render("~/sitecss")
     @Scripts.Render("~/sitescripts")
     @if (ViewBag.Editor == true)
     {
         @Scripts.Render("~/editor")
-        <meta name="Description" content="Coding tool that allows you to save and send executable snippets of C# code to others.">
+        <meta name="Description" content="Coding tool that allows you to save and send executable snippets of code to others.">
     }
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -20,7 +20,7 @@
             m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-221584-37', 'csharpfiddle.com');
+        ga('create', 'UA-221584-37', 'openfiddle.com');
         ga('send', 'pageview');
     </script>
 </head>
