Add a link to GitHub from the main site

--- a/OpenFiddle/Views/Shared/_Layout.cshtml
+++ b/OpenFiddle/Views/Shared/_Layout.cshtml
@@ -23,6 +23,6 @@
 </head>
 <body>
     @RenderBody()
-    <div class="ui-layout-south">A side project by <a href="http://twitter.com/mdaviesnet">@@mdaviesnet</a></div>
+<div class="ui-layout-south">An <a href="https://github.com/MattDavies/OpenFiddle" target="_blank">open source</a> side project by <a href="http://twitter.com/mdaviesnet" target="_blank">@@mdaviesnet</a></div>
 </body>
 </html>
