Used original Helper files from OpenFiddle to start on the console functions.

--- a/Src/Website/Views/Main/Index.cshtml
+++ b/Src/Website/Views/Main/Index.cshtml
@@ -12,7 +12,7 @@
                         <a href="#/home">Home</a>
                     </li>
                     <li>
-                        <a href="#/todomanager">Todo Manager</a>
+                        <a href="#/console">Console</a>
                     </li>
                     <li ng-show="loggedIn">
                         <a href="" ng-click="logout()">{{username}} | Sign Out</a>
