Added the output bar

--- a/Src/Website/Views/App/Console.cshtml
+++ b/Src/Website/Views/App/Console.cshtml
@@ -8,6 +8,7 @@
         <div id="consoleEditor" ng-model="code" />
     </div>
     <div >
+        <div class="bar"><span>Output</span></div>
             <textarea id="consoleOutput" ng-model="output" readonly="readonly"></textarea>
             <input type="hidden" ng-mode="id" value="@Guid.NewGuid()" />
     </div>
